--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>San Telmo - Muebles de Autor | Catálogo Digital</title>
     <meta name="description" content="Catálogo exclusivo de muebles de diseño, antigüedades y piezas de autor. San Telmo, Buenos Aires.">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/catalogo-san-telmo/css/styles.css">
 </head>
 <body>
     <!-- HEADER -->
@@ -113,6 +113,6 @@
         </div>
     </footer>
 
-    <script src="js/catalog.js"></script>
+    <script src="/catalogo-san-telmo/js/catalogo.js"></script>
 </body>
 </html>
